--- a/chat-backend/package.json
+++ b/chat-backend/package.json
@@ -2,9 +2,10 @@
   "name": "chat-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./server/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon --watch chat-backend"
   },
   "author": "",
   "license": "ISC",
