--- a/chat-backend/package.json
+++ b/chat-backend/package.json
@@ -5,7 +5,7 @@
   "main": "./server/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --watch chat-backend"
+    "start": "nodemon ./server/server.js --watch ."
   },
   "author": "",
   "license": "ISC",
@@ -16,5 +16,8 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "pg": "^8.8.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
