--- a/chat-frontend/package.json
+++ b/chat-frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.2.2",
+    "bad-words": "^3.0.4",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
