--- a/chat-backend/package.json
+++ b/chat-backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bad-words": "^3.0.4",
     "bcryptjs": "^2.4.3",
     "connect-pg-simple": "^8.0.0",
     "dotenv": "^16.0.3",
